Add hometown field
