# src/lib/api/openapi.json
@@ -1,1 +1,365 @@
-{"openapi":"3.0.2","info":{"title":"FastAPI","version":"0.1.0"},"paths":{"/heroes/{id}":{"get":{"tags":["Heroes"],"summary":"Get Hero","operationId":"get_hero_heroes__id__get","parameters":[{"required":true,"schema":{"title":"Id","type":"string","format":"uuid"},"name":"id","in":"path"}],"responses":{"200":{"description":"Successful Response","content":{"application/json":{"schema":{"$ref":"#/components/schemas/GetSuperhero"}}}},"422":{"description":"Validation Error","content":{"application/json":{"schema":{"$ref":"#/components/schemas/HTTPValidationError"}}}}}},"put":{"tags":["Heroes"],"summary":"Update Hero","operationId":"update_hero_heroes__id__put","parameters":[{"required":true,"schema":{"title":"Id","type":"string","format":"uuid"},"name":"id","in":"path"}],"requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/UpdateSuperhero"}}},"required":true},"responses":{"200":{"description":"Successful Response","content":{"application/json":{"schema":{"$ref":"#/components/schemas/GetSuperhero"}}}},"422":{"description":"Validation Error","content":{"application/json":{"schema":{"$ref":"#/components/schemas/HTTPValidationError"}}}}}}},"/heroes/":{"get":{"tags":["Heroes"],"summary":"Get Heroes","operationId":"get_heroes_heroes__get","responses":{"200":{"description":"Successful Response","content":{"application/json":{"schema":{"$ref":"#/components/schemas/GetHeroes"}}}}}},"post":{"tags":["Heroes"],"summary":"Create Hero","operationId":"create_hero_heroes__post","requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/CreateSuperhero"}}},"required":true},"responses":{"200":{"description":"Successful Response","content":{"application/json":{"schema":{"$ref":"#/components/schemas/GetSuperhero"}}}},"422":{"description":"Validation Error","content":{"application/json":{"schema":{"$ref":"#/components/schemas/HTTPValidationError"}}}}}}},"/health":{"get":{"summary":"Health","operationId":"health_health_get","responses":{"200":{"description":"Successful Response","content":{"application/json":{"schema":{"$ref":"#/components/schemas/HealthResponse"}}}}}}},"/":{"get":{"summary":"Root","operationId":"root__get","responses":{"200":{"description":"Successful Response","content":{"application/json":{"schema":{"title":"Response Root  Get","type":"object","additionalProperties":{"type":"string"}}}}}}}}},"components":{"schemas":{"CreateSuperhero":{"title":"CreateSuperhero","type":"object","properties":{"name":{"title":"Name","type":"string","example":"Batman"},"super_power":{"allOf":[{"$ref":"#/components/schemas/SuperPower"}],"example":"rich"}}},"GetHeroes":{"title":"GetHeroes","required":["heroes"],"type":"object","properties":{"heroes":{"title":"Heroes","type":"array","items":{"$ref":"#/components/schemas/GetSuperhero"}}}},"GetSuperhero":{"title":"GetSuperhero","required":["id"],"type":"object","properties":{"name":{"title":"Name","type":"string","example":"Batman"},"super_power":{"allOf":[{"$ref":"#/components/schemas/SuperPower"}],"example":"rich"},"id":{"title":"Id","type":"string","format":"uuid"}}},"HTTPValidationError":{"title":"HTTPValidationError","type":"object","properties":{"detail":{"title":"Detail","type":"array","items":{"$ref":"#/components/schemas/ValidationError"}}}},"HealthResponse":{"title":"HealthResponse","required":["status"],"type":"object","properties":{"status":{"title":"Status","type":"string"}}},"SuperPower":{"title":"SuperPower","enum":["flight","super-strength","super-speed","gills","rich"],"type":"string","description":"An enumeration."},"UpdateSuperhero":{"title":"UpdateSuperhero","type":"object","properties":{"name":{"title":"Name","type":"string"},"super_power":{"$ref":"#/components/schemas/SuperPower"}}},"ValidationError":{"title":"ValidationError","required":["loc","msg","type"],"type":"object","properties":{"loc":{"title":"Location","type":"array","items":{"anyOf":[{"type":"string"},{"type":"integer"}]}},"msg":{"title":"Message","type":"string"},"type":{"title":"Error Type","type":"string"}}}}}}
+{
+    "openapi": "3.0.2",
+    "info": {
+        "title": "FastAPI",
+        "version": "0.1.0"
+    },
+    "paths": {
+        "/heroes/{id}": {
+            "get": {
+                "tags": [
+                    "Heroes"
+                ],
+                "summary": "Get Hero",
+                "operationId": "get_hero_heroes__id__get",
+                "parameters": [
+                    {
+                        "required": true,
+                        "schema": {
+                            "title": "Id",
+                            "type": "string",
+                            "format": "uuid"
+                        },
+                        "name": "id",
+                        "in": "path"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/GetSuperhero"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/HTTPValidationError"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Heroes"
+                ],
+                "summary": "Update Hero",
+                "operationId": "update_hero_heroes__id__put",
+                "parameters": [
+                    {
+                        "required": true,
+                        "schema": {
+                            "title": "Id",
+                            "type": "string",
+                            "format": "uuid"
+                        },
+                        "name": "id",
+                        "in": "path"
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/UpdateSuperhero"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/GetSuperhero"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/HTTPValidationError"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/heroes/": {
+            "get": {
+                "tags": [
+                    "Heroes"
+                ],
+                "summary": "Get Heroes",
+                "operationId": "get_heroes_heroes__get",
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/GetHeroes"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Heroes"
+                ],
+                "summary": "Create Hero",
+                "operationId": "create_hero_heroes__post",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/CreateSuperhero"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/GetSuperhero"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/HTTPValidationError"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/health": {
+            "get": {
+                "summary": "Health",
+                "operationId": "health_health_get",
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/HealthResponse"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/": {
+            "get": {
+                "summary": "Root",
+                "operationId": "root__get",
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "title": "Response Root  Get",
+                                    "type": "object",
+                                    "additionalProperties": {
+                                        "type": "string"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "components": {
+        "schemas": {
+            "CreateSuperhero": {
+                "title": "CreateSuperhero",
+                "type": "object",
+                "properties": {
+                    "name": {
+                        "title": "Name",
+                        "type": "string",
+                        "example": "Batman"
+                    },
+                    "super_power": {
+                        "allOf": [
+                            {
+                                "$ref": "#/components/schemas/SuperPower"
+                            }
+                        ],
+                        "example": "rich"
+                    },
+                    "hometown": {
+                        "title": "Hometown",
+                        "type": "string"
+                    }
+                }
+            },
+            "GetHeroes": {
+                "title": "GetHeroes",
+                "required": [
+                    "heroes"
+                ],
+                "type": "object",
+                "properties": {
+                    "heroes": {
+                        "title": "Heroes",
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/GetSuperhero"
+                        }
+                    }
+                }
+            },
+            "GetSuperhero": {
+                "title": "GetSuperhero",
+                "required": [
+                    "id"
+                ],
+                "type": "object",
+                "properties": {
+                    "name": {
+                        "title": "Name",
+                        "type": "string",
+                        "example": "Batman"
+                    },
+                    "super_power": {
+                        "allOf": [
+                            {
+                                "$ref": "#/components/schemas/SuperPower"
+                            }
+                        ],
+                        "example": "rich"
+                    },
+                    "hometown": {
+                        "title": "Hometown",
+                        "type": "string"
+                    },
+                    "id": {
+                        "title": "Id",
+                        "type": "string",
+                        "format": "uuid"
+                    }
+                }
+            },
+            "HTTPValidationError": {
+                "title": "HTTPValidationError",
+                "type": "object",
+                "properties": {
+                    "detail": {
+                        "title": "Detail",
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/ValidationError"
+                        }
+                    }
+                }
+            },
+            "HealthResponse": {
+                "title": "HealthResponse",
+                "required": [
+                    "status"
+                ],
+                "type": "object",
+                "properties": {
+                    "status": {
+                        "title": "Status",
+                        "type": "string"
+                    }
+                }
+            },
+            "SuperPower": {
+                "title": "SuperPower",
+                "enum": [
+                    "flight",
+                    "super-strength",
+                    "super-speed",
+                    "gills",
+                    "rich"
+                ],
+                "type": "string",
+                "description": "An enumeration."
+            },
+            "UpdateSuperhero": {
+                "title": "UpdateSuperhero",
+                "type": "object",
+                "properties": {
+                    "name": {
+                        "title": "Name",
+                        "type": "string"
+                    },
+                    "super_power": {
+                        "$ref": "#/components/schemas/SuperPower"
+                    },
+                    "hometown": {
+                        "title": "Hometown",
+                        "type": "string"
+                    }
+                }
+            },
+            "ValidationError": {
+                "title": "ValidationError",
+                "required": [
+                    "loc",
+                    "msg",
+                    "type"
+                ],
+                "type": "object",
+                "properties": {
+                    "loc": {
+                        "title": "Location",
+                        "type": "array",
+                        "items": {
+                            "anyOf": [
+                                {
+                                    "type": "string"
+                                },
+                                {
+                                    "type": "integer"
+                                }
+                            ]
+                        }
+                    },
+                    "msg": {
+                        "title": "Message",
+                        "type": "string"
+                    },
+                    "type": {
+                        "title": "Error Type",
+                        "type": "string"
+                    }
+                }
+            }
+        }
+    }
+}
